Add Perfo options to start_server_nohup.sh